--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-sonarjs": "0.10.0",
     "jest": "27.3.1",
     "nodemon": "2.0.14",
+    "prisma": "^5.17.0",
     "supertest": "6.1.6",
     "ts-jest": "27.0.7",
     "ts-node-dev": "1.1.8",
@@ -41,7 +42,6 @@
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
-    "jsonwebtoken": "8.5.1",
-    "mysql2": "2.3.0"
+    "jsonwebtoken": "8.5.1"
   }
 }
