refact: reimplement create user and login endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,6 @@ services:
       - db
     ports:
       - 3000:3000
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: trybesmith_db
-      POSTGRES_HOST: db
 
   db:
     container_name: trybesmith_db
@@ -24,7 +19,7 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: trybesmith_db
+      POSTGRES_DB: trybesmithdb
 networks:
   default:
     name: trybesmith_net
