--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "4.4.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
